# hotel-san-carlos-pos

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
public/: index.html
src/: App.jsx  firebase.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: HistoryModal.jsx  Layout.jsx  PrintTicket.jsx  PrivateRoute.jsx  RoomCard.jsx  Sidebar.jsx  generarPDFTicket.jsx
src/context/: AuthContext.jsx
src/pages/: Consultas.jsx  Dashboard.jsx  Entradas.jsx  Habitaciones.jsx  Home.jsx  Login.jsx  Precios.jsx  Reportes.jsx  Reservations.jsx  Salidas.jsx
src/utils/: utilsFecha.js
